// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RoomLiveShareWarning /> when user has live beacons and geolocation is available renders correctly with one live beacon in room 1`] = `
<DocumentFragment>
  <div
    class="mx_RoomLiveShareWarning"
  >
    <div
      class="mx_StyledLiveBeaconIcon mx_RoomLiveShareWarning_icon"
    />
    <span
      class="mx_RoomLiveShareWarning_label"
    >
      You are sharing your live location
    </span>
    <span
      class="mx_LiveTimeRemaining"
      data-testid="room-live-share-expiry"
    >
      1h left
    </span>
    <button
      class="mx_AccessibleButton mx_RoomLiveShareWarning_stopButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger"
      data-testid="room-live-share-primary-button"
      role="button"
      tabindex="0"
    >
      Stop
    </button>
  </div>
</DocumentFragment>
`;

exports[`<RoomLiveShareWarning /> when user has live beacons and geolocation is available renders correctly with two live beacons in room 1`] = `
<DocumentFragment>
  <div
    class="mx_RoomLiveShareWarning"
  >
    <div
      class="mx_StyledLiveBeaconIcon mx_RoomLiveShareWarning_icon"
    />
    <span
      class="mx_RoomLiveShareWarning_label"
    >
      You are sharing your live location
    </span>
    <span
      class="mx_LiveTimeRemaining"
      data-testid="room-live-share-expiry"
    >
      12h left
    </span>
    <button
      class="mx_AccessibleButton mx_RoomLiveShareWarning_stopButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger"
      data-testid="room-live-share-primary-button"
      role="button"
      tabindex="0"
    >
      Stop
    </button>
  </div>
</DocumentFragment>
`;

exports[`<RoomLiveShareWarning /> when user has live beacons and geolocation is available stopping beacons displays error when stop sharing fails 1`] = `
<DocumentFragment>
  <div
    class="mx_RoomLiveShareWarning"
  >
    <div
      class="mx_StyledLiveBeaconIcon mx_RoomLiveShareWarning_icon mx_StyledLiveBeaconIcon_error"
    />
    <span
      class="mx_RoomLiveShareWarning_label"
    >
      An error occurred while stopping your live location, please try again
    </span>
    <button
      class="mx_AccessibleButton mx_RoomLiveShareWarning_stopButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger"
      data-testid="room-live-share-primary-button"
      role="button"
      tabindex="0"
    >
      Retry
    </button>
  </div>
</DocumentFragment>
`;

exports[`<RoomLiveShareWarning /> when user has live beacons and geolocation is available with location publish errors displays location publish error when mounted with location publish errors 1`] = `
<DocumentFragment>
  <div
    class="mx_RoomLiveShareWarning"
  >
    <div
      class="mx_StyledLiveBeaconIcon mx_RoomLiveShareWarning_icon mx_StyledLiveBeaconIcon_error"
    />
    <span
      class="mx_RoomLiveShareWarning_label"
    >
      An error occurred whilst sharing your live location, please try again
    </span>
    <button
      class="mx_AccessibleButton mx_RoomLiveShareWarning_stopButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger"
      data-testid="room-live-share-primary-button"
      role="button"
      tabindex="0"
    >
      Retry
    </button>
    <button
      aria-label="Stop and close"
      class="mx_AccessibleButton mx_RoomLiveShareWarning_closeButton"
      data-testid="room-live-share-wire-error-close-button"
      role="button"
      tabindex="0"
    >
      <svg
        class="mx_RoomLiveShareWarning_closeButtonIcon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
